fixed overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,7 @@ a {
     flex: 1;
     text-align: right;
     width: 35%;
+    overflow: hidden;
 }
 
 /******** Srcoll Down *********/
